--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "aws-sdk": "^2.853.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
     "multer": "^1.4.2",
     "nodemon": "^2.0.14"
   },
